--- a/kubeconfig/pervertxdocker-rc.yaml
+++ b/kubeconfig/pervertxdocker-rc.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
         -
-          image: "bsuresh/pervertxdocker:0.0.1-SNAPSHOT"
+          image: "bsuresh/pervertxdocker:0.0.2-SNAPSHOT"
           name: pervertxdocker
           env:
             -
@@ -21,5 +21,11 @@ spec:
 
           ports:
             -
-              containerPort: 8080
+              containerPort: 7070
               name: http
+            -
+              containerPort: 5701
+              name: tcp1
+            -
+              containerPort: 5702
+              name: tcp2
